# zWall

./: Cargo.toml  README.md  build.sh  install-service.sh  uninstall-service.sh
openrc/: zwall
openrc/conf.d/: zwall
ping-blocker/: Cargo.toml
ping-blocker-ebpf/: Cargo.toml
ping-blocker-ebpf/src/: main.rs
ping-blocker/src/: main.rs
systemd/: zwall.service
