[package]
name = "ping-blocker"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { version = "0.12", features = ["async_tokio"] }
aya-log = "0.12"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal", "time"] }

[profile.release]
opt-level = 3
lto = true
